<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@android:color/black">

    <TextView
        android:id="@+id/textAppName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/paramMID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textAppName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/paramState"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/license_checking"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paramMID" />

    <LinearLayout
        android:id="@+id/layoutShare"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paramState">

        <ImageView
            android:id="@+id/imageSkype"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="0"
            android:contentDescription="@string/app_skype"
            android:scaleType="fitXY"
            android:src="@drawable/logo_skype" />

        <ImageView
            android:id="@+id/imageWhatsapp"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="0"
            android:contentDescription="@string/app_whatsapp"
            android:scaleType="fitXY"
            android:src="@drawable/logo_whatsapp" />

        <ImageView
            android:id="@+id/imageWechat"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="0"
            android:contentDescription="@string/app_wechat"
            android:scaleType="fitXY"
            android:src="@drawable/logo_wechat" />

        <ImageView
            android:id="@+id/imageShare"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="0"
            android:contentDescription="@string/action_share"
            android:scaleType="fitXY"
            android:src="@android:drawable/ic_menu_share" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>